# kato

./: .claude-code-rules.md  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE-PLAN.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_V2_DIAGRAM.md  CHANGELOG.md  CLAUDE.md  CODE_QUALITY.md  CURRENT_TEST_STATUS.md  DATABASE_OPTIMIZATION_ANALYSIS.md  DYNAMIC_PORTS_GUIDE.md  Dockerfile  Dockerfile.test  Dockerfile.v2  FREQUENCY_FIXES.md  GEMINI.md  KATO_BEHAVIOR.md  KATO_DYNAMIC_PORTS_UPDATE.md  Makefile  OPTIMIZATION_NOTES.md  PERFORMANCE_ANALYSIS.md  PROJECT-HYGIENE.md  README-MANAGER.md  README-PARAMETERS.md  README.md  RELEASING.md  SECURITY_REVIEW.md  STATELESS_REFACTOR_PLAN.md  SYSTEM_STATUS.md  TECHNICAL_DEBT_REDUCTION.md  TEST-RESULTS.md  TEST_COMPATIBILITY_FINAL.md  TEST_DOCUMENTATION.md  TEST_FIX_PROGRESS.md  TEST_TROUBLESHOOTING_GUIDE.md  TODO-OPTIMIZATION-ACTIVATE.md  V1_TO_V2_TEST_MIGRATION_COMPLETE.md  (+54 more)
archive/: CLEANUP_SUMMARY.md  OPTIMIZATION_NOTES.md
benchmarks/: README.md  __init__.py  baseline.py  bottleneck_runner.py  compare_matchers.py  data_generator.py  profiler.py  test_database_latency.py  test_learning_path.py  test_prediction_path.py
config/: qdrant_config.yaml  qdrant_config_simple.yaml  redis.conf
deployment/: .env.example  DEPLOYMENT-GUIDE.md  MEMORY-MONITORING.md  README.md  docker-compose.auth.yml  docker-compose.yml  kato-manager.sh  start.sh
docs/: 00-START-HERE.md  API_MIGRATION_GUIDE.md  API_REFERENCE.md  ARCHITECTURE_COMPLETE.md  BREAKING_CHANGES_VECTOR_ARCHITECTURE.md  CONCEPTS.md  CONFIGURATION.md  CONFIGURATION_MANAGEMENT.md  CONTAINER_MANAGER.md  DATABASE_PERSISTENCE.md  EMOTIVES_PROCESSING.md  GETTING_STARTED.md  GLOSSARY.md  HYBRID_ARCHITECTURE.md  KATO_HYBRID_AGENT_GAP_ANALYSIS.md  KB_ID_ISOLATION.md  KNOWN_ISSUES_AND_BUGS.md  METADATA_PROCESSING.md  MODE_SWITCHING.md  MULTI_INSTANCE_GUIDE.md  NETWORK_TOPOLOGY_GUIDE.md  OPTIMIZATION_COMPLETION_REPORT.md  PATTERN_MATCHING.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PREDICTIVE_INFORMATION.md  RESOURCE_LEAK_FIX.md  SYSTEM_OVERVIEW.md  TESTING.md  TEST_MIGRATION_RESULTS.md  VECTOR_ARCHITECTURE_IMPLEMENTATION.md  VECTOR_MIGRATION_GUIDE.md  VECTOR_TEST_RESULTS.md
examples/: README.md  hierarchical-training.py  multi-instance-config.yaml  python-client.py  token-matching-example.py
kato/: __init__.py  kato_proc.proto
kato-gateway/: Dockerfile  config.yaml  kato_proc.proto  kato_proc_pb2.py  kato_proc_pb2_grpc.py  requirements.txt  run_gateway.py
kato-tests-v2/: KATO_BEHAVIOR_DOCUMENTATION.md
logs/: rotate-test-logs.sh
planning-docs/: ARCHITECTURE.md  ARCHIVE_SUMMARY.md  DAILY_BACKLOG.md  DECISIONS.md  FUTURE_FEATURES.md  PROJECT_OVERVIEW.md  README.md  SESSION_STATE.md  SPRINT_BACKLOG.md  USAGE_EXAMPLES.md  phase1.11-findings.md
(+684 files in other folders)
